# beewallet-core-spark

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
beewallet-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
beewallet-tauri/src/: lib.rs  main.rs
beewallet-tauri/ui/: index.html  package-lock.json  package.json  vite.config.ts
beewallet-tauri/ui/src/: App.svelte
beewallet-tauri/ui/src/components/: Connect.svelte  Onboarding.svelte  StepIndicator.svelte  Unlock.svelte  Wallet.svelte
beewallet-tauri/ui/src/components/onboarding/: Identity.svelte  MnemonicReveal.svelte  PinEntry.svelte  Quiz.svelte  RestoreGrid.svelte  Sealing.svelte  Welcome.svelte
beewallet-tauri/ui/src/components/ui/: Button.svelte  Card.svelte  IconButton.svelte  Input.svelte  index.ts
beewallet-tauri/ui/src/components/wallet/: BalanceCard.svelte  HomeTab.svelte  QuickActions.svelte  ReceiveTab.svelte  SendTab.svelte  index.ts
beewallet-tauri/ui/src/lib/: nine_s.ts  onboarding.svelte.ts  tauri.ts  theme.ts  wallet.svelte.ts
beewallet-tauri/ui/src/styles/: animations.css  global.css  variables.css
src/: lib.rs  mobi.rs  wallet_trait.rs
src/keys/: mod.rs
src/nine_s/: anchor.rs  channel.rs  kernel.rs  mod.rs  namespace.rs  patch.rs  scroll.rs  sealed.rs  store.rs
src/nine_s/backends/: file.rs  memory.rs  mod.rs
src/nostr/: mod.rs
src/vault/: crypto.rs  mod.rs  session.rs  store.rs
src/wallet_spark/: config.rs  events.rs  json_helpers.rs  mod.rs  namespace.rs  parse_helpers.rs  persistence.rs  reactor.rs  sdk.rs  signing.rs
