[package]
name = "beewallet-tauri"
version = "0.1.0"
description = "Spark Wallet Test UI"
authors = ["OBIVERSE"]
edition = "2021"

[lib]
name = "beewallet_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Our Spark wallet core
beewallet-core-spark = { path = "..", features = ["keys", "wallet", "crypto"] }
